--- a/packt/visitor/src/lib/visitor.component.html
+++ b/packt/visitor/src/lib/visitor.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav-container">
   <mat-sidenav
     #drawer
     class="sidenav"
@@ -23,6 +23,7 @@
       </button>
       <span>visitor</span>
     </mat-toolbar>
+    <packt-map></packt-map>
   </mat-sidenav-content>
-</mat-sidenav-container> -->
-<p>works</p>
+</mat-sidenav-container>
+
